# dhm

./: .gitignore  ARCHITECTURE-26JAN2026.md  CHANGELOG.md  LICENSE  README.md  ROADMAP-26JAN2026.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: main.yml  publish.yml
docs/: CONTRIBUTING-29JAN2026.md  SCORING_ALGORITHM_ANALYSIS-27JAN2026.md  SCORING_CRITERIA-27JAN2026.md  api-reference.md  architecture.md  user-guide.md
src/dhm/: __init__.py  __main__.py  api.py
src/dhm/analyzers/: __init__.py  alternatives.py
src/dhm/cache/: __init__.py  sqlite.py
src/dhm/cli/: __init__.py  main.py  output.py
src/dhm/collectors/: __init__.py  base.py  github.py  pypi.py  vulnerability.py
src/dhm/core/: __init__.py  calculator.py  exceptions.py  models.py  resolver.py  validation.py
src/dhm/reports/: __init__.py  formatters.py  generator.py
tests/: __init__.py  conftest.py  test_calculator.py  test_models.py  test_resolver.py
