[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dependency-health-monitor"
version = "0.1.0"
description = "Comprehensive health assessments for Python project dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DHM Contributors" }
]
keywords = [
    "dependencies",
    "health",
    "security",
    "vulnerabilities",
    "maintenance",
    "pypi",
    "github",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dhm = "dhm.cli.main:cli"

[project.urls]
Homepage = "https://github.com/jeremylaratro/dhm"
Documentation = "https://github.com/jeremylaratro/dhm#readme"
Repository = "https://github.com/jeremylaratro/dhm"
Issues = "https://github.com/jeremylaratro/dhm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dhm"]

[tool.dhm]
include_transitive = true
cache_ttl = 3600

[tool.dhm.thresholds]
min_grade = "C"
max_vulnerabilities = 0
max_abandoned = 0

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=dhm --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
